Fix: Collapse Menu Responsive

--- a/Proyecto_coder/css/styles.css
+++ b/Proyecto_coder/css/styles.css
@@ -1672,4 +1672,8 @@ header {
     flex-direction: column;
     justify-content: center;
   }
+
+  .collapse {
+    padding-left: 0%;
+  }
 }
